# FIXME: The installed headers need to be reworked for better system
# installation. In particular, they ought to have <> instead of "" and
# they should require a "fontforge/" prefix.

pkginclude_HEADERS = basics.h chardata.h charset.h config.h dynamic.h	\
	fileutil.h gdraw.h gfile.h ggadget.h gicons.h gimage.h gio.h		\
	gkeysym.h gprogress.h gresedit.h gresource.h gwidget.h gwwiconv.h	\
	intl.h ustring.h utype.h annotations_base.h

noinst_HEADERS = pluginloading.h

